compiler/y.output
Terminals unused in grammar

   TAB
   DEF
   RET


Grammar

    0 $accept: S $end

    1 S: ASSIGN
    2  | EXPR
    3  | CONDITIO
    4  | WHILE_LO
    5  | FOR_LOO1
    6  | FOR_LOO2

    7 CONDITIO: IF EXPR ':'

    8 WHILE_LO: WHILE EXPR ':'

    9 FOR_LOO1: FOR ASSIGN RIGHT_ARROW EXPR ':'

   10 FOR_LOO2: FOR VAR_DEF IN EXPR ':'

   11 ASSIGN: VAR_DEF '=' EXPR

   12 EXPR: VALUE
   13     | INDE
   14     | FUNCTIO
   15     | OPERATIO
   16     | SLIC
   17     | COMPAR

   18 COMPAR: EXPR EQUALITY EXPR
   19       | EXPR '>' EXPR
   20       | EXPR '<' EXPR
   21       | EXPR '>' '=' EXPR
   22       | EXPR '<' '=' EXPR

   23 OPERATIO: EXPR '+' EXPR
   24         | EXPR '-' EXPR
   25         | EXPR '/' EXPR
   26         | EXPR '*' EXPR

   27 SLIC: EXPR '[' SLIC_IND ']'

   28 SLIC_IND: EXPR ':' EXPR

   29 VALUE: INTEG
   30      | FLOA
   31      | STRIN
   32      | LON
   33      | DOUBL
   34      | VARIA
   35      | LIS
   36      | CHA

   37 INDE: EXPR '[' EXPR ']'

   38 FUNCTIO: FUNC ARGS ')'

   39 ARGS: ARGS ',' EXPR
   40     | EXPR

   41 FLOA: FLOAT_DEF

   42 STRIN: STR_DEF

   43 LON: LONG_DEF

   44 DOUBL: DOUBLE_DEF

   45 INTEG: INT_DEF

   46 CHA: CHAR_DEF

   47 LIS: TYPE_DEF LIST_DEF

   48 VARIA: VAR

   49 VAR_DEF: TYPE_DEF VAR
   50        | VAR

   51 FUNC: FUNCTION_DEF

   52 TYPE_DEF: INT_TYPE
   53         | FLOAT_TYPE
   54         | LONG_TYPE
   55         | DOUBLE_TYPE
   56         | STR_TYPE
   57         | CHAR_TYPE


Terminals, with rules where they appear

$end (0) 0
')' (41) 38
'*' (42) 26
'+' (43) 23
',' (44) 39
'-' (45) 24
'/' (47) 25
':' (58) 7 8 9 10 28
'<' (60) 20 22
'=' (61) 11 21 22
'>' (62) 19 21
'[' (91) 27 37
']' (93) 27 37
error (256)
INT_TYPE (258) 52
FLOAT_TYPE (259) 53
DOUBLE_TYPE (260) 55
LONG_TYPE (261) 54
STR_TYPE (262) 56
CHAR_TYPE (263) 57
TAB (264)
DEF (265)
INT_DEF (266) 45
STR_DEF (267) 42
FLOAT_DEF (268) 41
DOUBLE_DEF (269) 44
LONG_DEF (270) 43
LIST_DEF (271) 47
CHAR_DEF (272) 46
FUNCTION_DEF (273) 51
VAR (274) 48 49 50
RET (275)
IF (276) 7
WHILE (277) 8
FOR (278) 9 10
IN (279) 10
RIGHT_ARROW (280) 9
EQUALITY (281) 18


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
S (40)
    on left: 1 2 3 4 5 6, on right: 0
CONDITIO (41)
    on left: 7, on right: 3
WHILE_LO (42)
    on left: 8, on right: 4
FOR_LOO1 (43)
    on left: 9, on right: 5
FOR_LOO2 (44)
    on left: 10, on right: 6
ASSIGN (45)
    on left: 11, on right: 1 9
EXPR (46)
    on left: 12 13 14 15 16 17, on right: 2 7 8 9 10 11 18 19 20 21
    22 23 24 25 26 27 28 37 39 40
COMPAR (47)
    on left: 18 19 20 21 22, on right: 17
OPERATIO (48)
    on left: 23 24 25 26, on right: 15
SLIC (49)
    on left: 27, on right: 16
SLIC_IND (50)
    on left: 28, on right: 27
VALUE (51)
    on left: 29 30 31 32 33 34 35 36, on right: 12
INDE (52)
    on left: 37, on right: 13
FUNCTIO (53)
    on left: 38, on right: 14
ARGS (54)
    on left: 39 40, on right: 38 39
FLOA (55)
    on left: 41, on right: 30
STRIN (56)
    on left: 42, on right: 31
LON (57)
    on left: 43, on right: 32
DOUBL (58)
    on left: 44, on right: 33
INTEG (59)
    on left: 45, on right: 29
CHA (60)
    on left: 46, on right: 36
LIS (61)
    on left: 47, on right: 35
VARIA (62)
    on left: 48, on right: 34
VAR_DEF (63)
    on left: 49 50, on right: 10 11
FUNC (64)
    on left: 51, on right: 38
TYPE_DEF (65)
    on left: 52 53 54 55 56 57, on right: 47 49


State 0

    0 $accept: . S $end

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 14
    IF            shift, and go to state 15
    WHILE         shift, and go to state 16
    FOR           shift, and go to state 17

    S         go to state 18
    CONDITIO  go to state 19
    WHILE_LO  go to state 20
    FOR_LOO1  go to state 21
    FOR_LOO2  go to state 22
    ASSIGN    go to state 23
    EXPR      go to state 24
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    VAR_DEF   go to state 39
    FUNC      go to state 40
    TYPE_DEF  go to state 41


State 1

   52 TYPE_DEF: INT_TYPE .

    $default  reduce using rule 52 (TYPE_DEF)


State 2

   53 TYPE_DEF: FLOAT_TYPE .

    $default  reduce using rule 53 (TYPE_DEF)


State 3

   55 TYPE_DEF: DOUBLE_TYPE .

    $default  reduce using rule 55 (TYPE_DEF)


State 4

   54 TYPE_DEF: LONG_TYPE .

    $default  reduce using rule 54 (TYPE_DEF)


State 5

   56 TYPE_DEF: STR_TYPE .

    $default  reduce using rule 56 (TYPE_DEF)


State 6

   57 TYPE_DEF: CHAR_TYPE .

    $default  reduce using rule 57 (TYPE_DEF)


State 7

   45 INTEG: INT_DEF .

    $default  reduce using rule 45 (INTEG)


State 8

   42 STRIN: STR_DEF .

    $default  reduce using rule 42 (STRIN)


State 9

   41 FLOA: FLOAT_DEF .

    $default  reduce using rule 41 (FLOA)


State 10

   44 DOUBL: DOUBLE_DEF .

    $default  reduce using rule 44 (DOUBL)


State 11

   43 LON: LONG_DEF .

    $default  reduce using rule 43 (LON)


State 12

   46 CHA: CHAR_DEF .

    $default  reduce using rule 46 (CHA)


State 13

   51 FUNC: FUNCTION_DEF .

    $default  reduce using rule 51 (FUNC)


State 14

   48 VARIA: VAR .
   50 VAR_DEF: VAR .

    '='       reduce using rule 50 (VAR_DEF)
    $default  reduce using rule 48 (VARIA)


State 15

    7 CONDITIO: IF . EXPR ':'

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 43
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 16

    8 WHILE_LO: WHILE . EXPR ':'

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 45
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 17

    9 FOR_LOO1: FOR . ASSIGN RIGHT_ARROW EXPR ':'
   10 FOR_LOO2: FOR . VAR_DEF IN EXPR ':'

    INT_TYPE     shift, and go to state 1
    FLOAT_TYPE   shift, and go to state 2
    DOUBLE_TYPE  shift, and go to state 3
    LONG_TYPE    shift, and go to state 4
    STR_TYPE     shift, and go to state 5
    CHAR_TYPE    shift, and go to state 6
    VAR          shift, and go to state 46

    ASSIGN    go to state 47
    VAR_DEF   go to state 48
    TYPE_DEF  go to state 49


State 18

    0 $accept: S . $end

    $end  shift, and go to state 50


State 19

    3 S: CONDITIO .

    $default  reduce using rule 3 (S)


State 20

    4 S: WHILE_LO .

    $default  reduce using rule 4 (S)


State 21

    5 S: FOR_LOO1 .

    $default  reduce using rule 5 (S)


State 22

    6 S: FOR_LOO2 .

    $default  reduce using rule 6 (S)


State 23

    1 S: ASSIGN .

    $default  reduce using rule 1 (S)


State 24

    2 S: EXPR .
   18 COMPAR: EXPR . EQUALITY EXPR
   19       | EXPR . '>' EXPR
   20       | EXPR . '<' EXPR
   21       | EXPR . '>' '=' EXPR
   22       | EXPR . '<' '=' EXPR
   23 OPERATIO: EXPR . '+' EXPR
   24         | EXPR . '-' EXPR
   25         | EXPR . '/' EXPR
   26         | EXPR . '*' EXPR
   27 SLIC: EXPR . '[' SLIC_IND ']'
   37 INDE: EXPR . '[' EXPR ']'

    '+'       shift, and go to state 51
    '-'       shift, and go to state 52
    '*'       shift, and go to state 53
    '/'       shift, and go to state 54
    '['       shift, and go to state 55
    '<'       shift, and go to state 56
    '>'       shift, and go to state 57
    EQUALITY  shift, and go to state 58

    $default  reduce using rule 2 (S)


State 25

   17 EXPR: COMPAR .

    $default  reduce using rule 17 (EXPR)


State 26

   15 EXPR: OPERATIO .

    $default  reduce using rule 15 (EXPR)


State 27

   16 EXPR: SLIC .

    $default  reduce using rule 16 (EXPR)


State 28

   12 EXPR: VALUE .

    $default  reduce using rule 12 (EXPR)


State 29

   13 EXPR: INDE .

    $default  reduce using rule 13 (EXPR)


State 30

   14 EXPR: FUNCTIO .

    $default  reduce using rule 14 (EXPR)


State 31

   30 VALUE: FLOA .

    $default  reduce using rule 30 (VALUE)


State 32

   31 VALUE: STRIN .

    $default  reduce using rule 31 (VALUE)


State 33

   32 VALUE: LON .

    $default  reduce using rule 32 (VALUE)


State 34

   33 VALUE: DOUBL .

    $default  reduce using rule 33 (VALUE)


State 35

   29 VALUE: INTEG .

    $default  reduce using rule 29 (VALUE)


State 36

   36 VALUE: CHA .

    $default  reduce using rule 36 (VALUE)


State 37

   35 VALUE: LIS .

    $default  reduce using rule 35 (VALUE)


State 38

   34 VALUE: VARIA .

    $default  reduce using rule 34 (VALUE)


State 39

   11 ASSIGN: VAR_DEF . '=' EXPR

    '='  shift, and go to state 59


State 40

   38 FUNCTIO: FUNC . ARGS ')'

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 60
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    ARGS      go to state 61
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 41

   47 LIS: TYPE_DEF . LIST_DEF
   49 VAR_DEF: TYPE_DEF . VAR

    LIST_DEF  shift, and go to state 62
    VAR       shift, and go to state 63


State 42

   48 VARIA: VAR .

    $default  reduce using rule 48 (VARIA)


State 43

    7 CONDITIO: IF EXPR . ':'
   18 COMPAR: EXPR . EQUALITY EXPR
   19       | EXPR . '>' EXPR
   20       | EXPR . '<' EXPR
   21       | EXPR . '>' '=' EXPR
   22       | EXPR . '<' '=' EXPR
   23 OPERATIO: EXPR . '+' EXPR
   24         | EXPR . '-' EXPR
   25         | EXPR . '/' EXPR
   26         | EXPR . '*' EXPR
   27 SLIC: EXPR . '[' SLIC_IND ']'
   37 INDE: EXPR . '[' EXPR ']'

    '+'       shift, and go to state 51
    '-'       shift, and go to state 52
    '*'       shift, and go to state 53
    '/'       shift, and go to state 54
    '['       shift, and go to state 55
    '<'       shift, and go to state 56
    '>'       shift, and go to state 57
    EQUALITY  shift, and go to state 58
    ':'       shift, and go to state 64


State 44

   47 LIS: TYPE_DEF . LIST_DEF

    LIST_DEF  shift, and go to state 62


State 45

    8 WHILE_LO: WHILE EXPR . ':'
   18 COMPAR: EXPR . EQUALITY EXPR
   19       | EXPR . '>' EXPR
   20       | EXPR . '<' EXPR
   21       | EXPR . '>' '=' EXPR
   22       | EXPR . '<' '=' EXPR
   23 OPERATIO: EXPR . '+' EXPR
   24         | EXPR . '-' EXPR
   25         | EXPR . '/' EXPR
   26         | EXPR . '*' EXPR
   27 SLIC: EXPR . '[' SLIC_IND ']'
   37 INDE: EXPR . '[' EXPR ']'

    '+'       shift, and go to state 51
    '-'       shift, and go to state 52
    '*'       shift, and go to state 53
    '/'       shift, and go to state 54
    '['       shift, and go to state 55
    '<'       shift, and go to state 56
    '>'       shift, and go to state 57
    EQUALITY  shift, and go to state 58
    ':'       shift, and go to state 65


State 46

   50 VAR_DEF: VAR .

    $default  reduce using rule 50 (VAR_DEF)


State 47

    9 FOR_LOO1: FOR ASSIGN . RIGHT_ARROW EXPR ':'

    RIGHT_ARROW  shift, and go to state 66


State 48

   10 FOR_LOO2: FOR VAR_DEF . IN EXPR ':'
   11 ASSIGN: VAR_DEF . '=' EXPR

    IN   shift, and go to state 67
    '='  shift, and go to state 59


State 49

   49 VAR_DEF: TYPE_DEF . VAR

    VAR  shift, and go to state 63


State 50

    0 $accept: S $end .

    $default  accept


State 51

   23 OPERATIO: EXPR '+' . EXPR

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 68
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 52

   24 OPERATIO: EXPR '-' . EXPR

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 69
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 53

   26 OPERATIO: EXPR '*' . EXPR

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 70
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 54

   25 OPERATIO: EXPR '/' . EXPR

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 71
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 55

   27 SLIC: EXPR '[' . SLIC_IND ']'
   37 INDE: EXPR '[' . EXPR ']'

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42

    EXPR      go to state 72
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    SLIC_IND  go to state 73
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 56

   20 COMPAR: EXPR '<' . EXPR
   22       | EXPR '<' . '=' EXPR

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42
    '='           shift, and go to state 74

    EXPR      go to state 75
    COMPAR    go to state 25
    OPERATIO  go to state 26
    SLIC      go to state 27
    VALUE     go to state 28
    INDE      go to state 29
    FUNCTIO   go to state 30
    FLOA      go to state 31
    STRIN     go to state 32
    LON       go to state 33
    DOUBL     go to state 34
    INTEG     go to state 35
    CHA       go to state 36
    LIS       go to state 37
    VARIA     go to state 38
    FUNC      go to state 40
    TYPE_DEF  go to state 44


State 57

   19 COMPAR: EXPR '>' . EXPR
   21       | EXPR '>' . '=' EXPR

    INT_TYPE      shift, and go to state 1
    FLOAT_TYPE    shift, and go to state 2
    DOUBLE_TYPE   shift, and go to state 3
    LONG_TYPE     shift, and go to state 4
    STR_TYPE      shift, and go to state 5
    CHAR_TYPE     shift, and go to state 6
    INT_DEF       shift, and go to state 7
    STR_DEF       shift, and go to state 8
    FLOAT_DEF     shift, and go to state 9
    DOUBLE_DEF    shift, and go to state 10
    LONG_DEF      shift, and go to state 11
    CHAR_DEF      shift, and go to state 12
    FUNCTION_DEF  shift, and go to state 13
    VAR           shift, and go to state 42
    '='           shift, and go to state 76
